fix flex layout issue on refs

--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -410,7 +410,6 @@
   }
   .references .ref-item,
   .ref-item.primary-ref {
-      flex-basis: max-content;
       flex-grow: 1;
       flex-shrink: 1;
   }
